--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
 <!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type ="text/css" href="css/stylesheet.css"/>
+  <title>Renovate</title>
+</head>
+<body>
+  <header>
+    <div class="top">
+      <div class="contact">
+        <ul>
+          <li>+228 872 4444</li>
+          <li class="mail">contact@gmail.com</li>
+        </ul>
+      </div>
+      <div class="share">
+        <ul>
+          <li><a href="">F</a></li>
+          <li><a href="">T</a></li>
+          <li><a href="">G+</a></li>
+          <li><a href="">P</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="bot">
+      <div class="logo">
+        <a href="">Renova</a>
+      </div>
+      <div class="nav">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Service</a></li>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Pages</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Cost calculator</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
+</body>
+</html>
