picture + other div

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class="nav">
         <ul>
-          <li><a href="">Home</a></li>
+          <li class="home"><a href="">Home</a></li>
           <li><a href="">Service</a></li>
           <li><a href="">Projects</a></li>
           <li><a href="">Pages</a></li>
@@ -40,5 +40,26 @@
       </div>
     </div>
   </header>
+    <div class="acceuil">
+        <img src="img/acceuil.jpg" alt="image d'acceuil">
+    </div>
+      <div class="block">
+        <div class="top-block">
+        <p class="titre-block">bla blabla blibli bloblbo</p>
+        </div>
+          <div>
+        <p class="bot-block">jhdgj rnjezhnrjezj rjnejnr jrbeznr nezrb fhf</p>
+          </div>
+            <div>
+        <button class="bot-button" type="button" name="button">Buy this template</button>
+            </div>
+      </div>
+    </div>
+    <div class="middle">
+      <div class="text-middle">
+        <p class="title-text-middle">Cost of renovation</p>
+        <p class="text-middle">bjdzabdjb bjzabdjj hbzahdbb hazbdhd</p>
+      </div>
+    </div>
 </body>
 </html>
