add button and some div

--- a/index.html
+++ b/index.html
@@ -55,11 +55,25 @@
       </div>
 
     </div>
-          </div>
+
     <div class="middle">
       <div class="text-middle">
         <p class="title-text-middle">Cost of renovation</p>
         <p class="text-middle">bjdzabdjb bjzabdjj hbzahdbb hazbdhd</p>
+      </div>
+      <div class="mid-button">
+        <p class="text-button">Request a note</p>
+      </div>
+    </div>
+
+    <div class="service">
+      <div class="photos">
+        <div class="photo1">
+        </div>
+        <div class="photo2">
+        </div>
+        <div class="photo3">
+        </div>
       </div>
     </div>
 </body>
