add picture fixed button

--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
           <div>
         <p class="bot-block">jhdgj rnjezhnrjezj rjnejnr jrbeznr nezrb fhf</p>
           </div>
-            <div>
-        <button class="bot-button" type="button" name="button">Buy this template</button>
+          <a href="http://google.com">
+            <div class="bot-button">
+              <p class="text-button1">Buy this template</p>
             </div>
+          </a>
       </div>
 
     </div>
@@ -61,18 +63,44 @@
         <p class="title-text-middle">Cost of renovation</p>
         <p class="text-middle">bjdzabdjb bjzabdjj hbzahdbb hazbdhd</p>
       </div>
-      <div class="mid-button">
-        <p class="text-button">Request a note</p>
+        <a href="http://google.com">
+        <div class="mid-button">
+          <p class="text-button">Request a note</p>
+        </div>
+        </a>
       </div>
-    </div>
 
     <div class="service">
+      <h2>Our service</h2>
+        <p class="text-service">kds,fklsd,fnklsnfsfknkfnsknnfsndfnjsdfjfsd fjnfjsbdfb sf sdfjsd f nsd f sd f sdfjsd fj fj sdf<br>
+        jdsfjsdjhfjsdhfgdjgjdbngfndjngjdfjgbfdjbgjdlfs,fknzkndknsfksndfknsdknfkdsnfskdfnksdnfnnfdksfnksdnfnsdnf</p>
       <div class="photos">
-        <div class="photo1">
+        <div class="photo">
+          <div class="photo-img">
+            <img src="img/photo1.jpg" alt="Personne en train de mesurer le parquet">
+              <div class="text-photos">
+                <h3>Interior renovation</h3>
+                <p class="text-service">fnjernfjnrefnefnejnf  ejfjenef ejeef jefje fje fje jef jfebbfjef</p>
+              </div>
+          </div>
+      </div>
+      <div class="photo">
+        <div class="photo-img">
+          <img src="img/photo2.jpg" alt="Briques et truelle.">
         </div>
-        <div class="photo2">
+          <div class="text-photos">
+            <h3>Design and build</h3>
+            <p class="text-service">jhbdhvzavedaz dazd azedayudbahudbak dahdbahdbaudbavda duadauhgd ad a</p>
+          </div>
+      </div>
+        <div class="photo">
+        <div class="photo-img">
+          <img src="img/photo3.jpg" alt="Maçon en train de mettre du ciment.">
         </div>
-        <div class="photo3">
+          <div class="text-photos">
+            <h3>Tiling and painting</h3>
+            <p class="text-service">gnjengejingerg genergengneg egnene ngjegeion jg j gegnegj eetrerte</p>
+          </div>
         </div>
       </div>
     </div>
