--- a/index.html
+++ b/index.html
@@ -41,68 +41,89 @@
     </div>
   </header>
 
-    <div class="acceuil">
-      <div class="block">
-        <div class="top-block">
+  <div class="acceuil">
+    <div class="block">
+      <div class="top-block">
         <p class="titre-block">bla blabla blibli bloblbo</p>
-        </div>
-          <div>
+      </div>
+      <div>
         <p class="bot-block">jhdgj rnjezhnrjezj rjnejnr jrbeznr nezrb fhf</p>
-          </div>
-          <a href="http://google.com">
-            <div class="bot-button">
-              <p class="text-button1">Buy this template</p>
-            </div>
-          </a>
       </div>
-
-    </div>
-
-    <div class="middle">
-      <div class="text-middle">
-        <p class="title-text-middle">Cost of renovation</p>
-        <p class="text-middle">bjdzabdjb bjzabdjj hbzahdbb hazbdhd</p>
-      </div>
-        <a href="http://google.com">
-        <div class="mid-button">
-          <p class="text-button">Request a note</p>
+      <a href="http://google.com">
+        <div class="bot-button">
+          <p class="text-button1">Buy this template</p>
         </div>
-        </a>
-      </div>
+      </a>
+    </div>
+  </div>
 
-    <div class="service">
-      <h2>Our service</h2>
-        <p class="text-service">kds,fklsd,fnklsnfsfknkfnsknnfsndfnjsdfjfsd fjnfjsbdfb sf sdfjsd f nsd f sd f sdfjsd fj fj sdf<br>
-        jdsfjsdjhfjsdhfgdjgjdbngfndjngjdfjgbfdjbgjdlfs,fknzkndknsfksndfknsdknfkdsnfskdfnksdnfnnfdksfnksdnfnsdnf</p>
+  <div class="middle">
+    <div class="text-middle">
+      <p class="title-text-middle">Cost of renovation</p>
+      <p class="text-middle">bjdzabdjb bjzabdjj hbzahdbb hazbdhd</p>
+    </div>
+    <a href="http://google.com">
+      <div class="mid-button">
+        <p class="text-button">Request a note</p>
+      </div>
+    </a>
+  </div>
+
+  <div class="service">
+    <h2>Our service</h2>
+    <p class="text-service">kds,fklsd,fnklsnfsfknkfnsknnfsndfnjsdfjfsd fjnfjsbdfb sf sdfjsd f nsd f sd f sdfjsd fj fj sdf<br>
+      jdsfjsdjhfjsdhfgdjgjdbngfndjngjdfjgbfdjbgjdlfs,fknzkndknsfksndfknsdknfkdsnfskdfnksdnfnnfdksfnksdnfnsdnf</p>
       <div class="photos">
         <div class="photo">
           <div class="photo-img">
             <img src="img/photo1.jpg" alt="Personne en train de mesurer le parquet">
-              <div class="text-photos">
-                <h3>Interior renovation</h3>
-                <p class="text-service">fnjernfjnrefnefnejnf  ejfjenef ejeef jefje fje fje jef jfebbfjef</p>
-              </div>
+            <div class="text-photos">
+              <h3>Interior renovation</h3>
+              <p class="text-service">fnjernfjnrefnefnejnf  ejfjenef ejeef jefje fje fje jef jfebbfjef</p>
+            </div>
           </div>
-      </div>
-      <div class="photo">
-        <div class="photo-img">
-          <img src="img/photo2.jpg" alt="Briques et truelle.">
         </div>
+        <div class="photo">
+          <div class="photo-img">
+            <img src="img/photo2.jpg" alt="Briques et truelle.">
+          </div>
           <div class="text-photos">
             <h3>Design and build</h3>
             <p class="text-service">jhbdhvzavedaz dazd azedayudbahudbak dahdbahdbaudbavda duadauhgd ad a</p>
           </div>
-      </div>
-        <div class="photo">
-        <div class="photo-img">
-          <img src="img/photo3.jpg" alt="Maçon en train de mettre du ciment.">
         </div>
+        <div class="photo">
+          <div class="photo-img">
+            <img src="img/photo3.jpg" alt="Maçon en train de mettre du ciment.">
+          </div>
           <div class="text-photos">
             <h3>Tiling and painting</h3>
             <p class="text-service">gnjengejingerg genergengneg egnene ngjegeion jg j gegnegj eetrerte</p>
           </div>
         </div>
+        <div class="service-button">
+          <p class="text-button">View all service</p>
+        </div>
       </div>
     </div>
-</body>
-</html>
+
+    <div class="recent-projects">
+      <h2>Recent projects</h2>
+      <p class="text-projects">engekongkejngjkngejkng ejgnjekgejkngjkeng ezggzgzgvdcdeef erfefefef
+        zfeifejziriejriejrije"jrjefebrfbehbfehfebfefhebfhje fjehbfhjebfhebr
+        jgbrgruibghrug gebghergherbghberhgb gehgbhejrbgehjbgeh zjfbejhzbghjezbfb he fhebfj efje  f er fe f e </p>
+        <div class="img-slide">
+          <img src="img/photo4.jpg" alt="images">
+        </div class="about-us">
+        <h2>About us</h2>
+        <p class="text-projects">engekongkejngjkngejkng ejgnjekgejkngjkeng ezggzgzgvdcdeef erfefefef
+          zfeifejziriejriejrije"jrjefebrfbehbfehfebfefhebfhje fjehbfhjebfhebr
+          jgbrgruibghrug gebghergherbghberhgb gehgbhejrbgehjbgeh zjfbejhzbghjezbfb he fhebfj efje  f er fe f e </p>
+          <div class="photo-about">
+            <img src="img/photo5.jpg" alt="image ronde de l'acceuil">
+          </div>
+          <div class="text-about">
+          </div>
+      </div>
+    </body>
+    </html>
