end of part about us

--- a/index.html
+++ b/index.html
@@ -1,129 +1,163 @@
-<!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" type ="text/css" href="css/stylesheet.css"/>
-  <title>Renovate</title>
-</head>
-<body>
-  <header>
-    <div class="top">
-      <div class="contact">
-        <ul>
-          <li>+228 872 4444</li>
-          <li class="mail">contact@gmail.com</li>
-        </ul>
+  <!doctype html>
+  <html lang="fr">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type ="text/css" href="css/stylesheet.css"/>
+    <title>Renovate</title>
+  </head>
+  <body>
+    <header>
+      <div class="top">
+        <div class="contact">
+          <ul>
+            <li>+228 872 4444</li>
+            <li class="mail">contact@gmail.com</li>
+          </ul>
+        </div>
+        <div class="share">
+          <ul>
+            <li><a href="">F</a></li>
+            <li><a href="">T</a></li>
+            <li><a href="">G+</a></li>
+            <li><a href="">P</a></li>
+          </ul>
+        </div>
       </div>
-      <div class="share">
-        <ul>
-          <li><a href="">F</a></li>
-          <li><a href="">T</a></li>
-          <li><a href="">G+</a></li>
-          <li><a href="">P</a></li>
-        </ul>
+      <div class="bot">
+        <div class="logo">
+          <a href="">Renova</a>
+        </div>
+        <div class="nav">
+          <ul>
+            <li class="home"><a href="">Home</a></li>
+            <li><a href="">Service</a></li>
+            <li><a href="">Projects</a></li>
+            <li><a href="">Pages</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Cost calculator</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-    <div class="bot">
-      <div class="logo">
-        <a href="">Renova</a>
-      </div>
-      <div class="nav">
-        <ul>
-          <li class="home"><a href="">Home</a></li>
-          <li><a href="">Service</a></li>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Pages</a></li>
-          <li><a href="">Blog</a></li>
-          <li><a href="">Cost calculator</a></li>
-          <li><a href="">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </header>
+    </header>
 
-  <div class="acceuil">
-    <div class="block">
-      <div class="top-block">
-        <p class="titre-block">bla blabla blibli bloblbo</p>
+    <div class="acceuil">
+      <div class="block">
+        <div class="top-block">
+          <p class="titre-block">bla blabla blibli bloblbo</p>
+        </div>
+        <div>
+          <p class="bot-block">jhdgj rnjezhnrjezj rjnejnr jrbeznr nezrb fhf</p>
+        </div>
+        <a href="http://google.com">
+          <div class="bot-button">
+            <p class="text-button1">Buy this template</p>
+          </div>
+        </a>
       </div>
-      <div>
-        <p class="bot-block">jhdgj rnjezhnrjezj rjnejnr jrbeznr nezrb fhf</p>
+    </div>
+
+    <div class="middle">
+      <div class="text-middle">
+        <p class="title-text-middle">Cost of renovation</p>
+        <p class="text-middle">bjdzabdjb bjzabdjj hbzahdbb hazbdhd</p>
       </div>
       <a href="http://google.com">
-        <div class="bot-button">
-          <p class="text-button1">Buy this template</p>
+        <div class="mid-button">
+          <p class="text-button">Request a note</p>
         </div>
       </a>
     </div>
-  </div>
 
-  <div class="middle">
-    <div class="text-middle">
-      <p class="title-text-middle">Cost of renovation</p>
-      <p class="text-middle">bjdzabdjb bjzabdjj hbzahdbb hazbdhd</p>
-    </div>
-    <a href="http://google.com">
-      <div class="mid-button">
-        <p class="text-button">Request a note</p>
-      </div>
-    </a>
-  </div>
-
-  <div class="service">
-    <h2>Our service</h2>
-    <p class="text-service">kds,fklsd,fnklsnfsfknkfnsknnfsndfnjsdfjfsd fjnfjsbdfb sf sdfjsd f nsd f sd f sdfjsd fj fj sdf<br>
-      jdsfjsdjhfjsdhfgdjgjdbngfndjngjdfjgbfdjbgjdlfs,fknzkndknsfksndfknsdknfkdsnfskdfnksdnfnnfdksfnksdnfnsdnf</p>
-      <div class="photos">
-        <div class="photo">
-          <div class="photo-img">
-            <img src="img/photo1.jpg" alt="Personne en train de mesurer le parquet">
-            <div class="text-photos">
-              <h3>Interior renovation</h3>
-              <p class="text-service">fnjernfjnrefnefnejnf  ejfjenef ejeef jefje fje fje jef jfebbfjef</p>
+    <div class="service">
+      <h2>Our service</h2>
+      <p class="text-service">kds,fklsd,fnklsnfsfknkfnsknnfsndfnjsdfjfsd fjnfjsbdfb sf sdfjsd f nsd f sd f sdfjsd fj fj sdf<br>
+        jdsfjsdjhfjsdhfgdjgjdbngfndjngjdfjgbfdjbgjdlfs,fknzkndknsfksndfknsdknfkdsnfskdfnksdnfnnfdksfnksdnfnsdnf</p>
+        <div class="photos">
+          <div class="photo">
+            <div class="photo-img">
+              <img src="img/photo1.jpg" alt="Personne en train de mesurer le parquet">
+              <div class="text-photos">
+                <h3>Interior renovation</h3>
+                <p class="text-service">fnjernfjnrefnefnejnf  ejfjenef ejeef jefje fje fje jef jfebbfjef</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="photo">
-          <div class="photo-img">
-            <img src="img/photo2.jpg" alt="Briques et truelle.">
+          <div class="photo">
+            <div class="photo-img">
+              <img src="img/photo2.jpg" alt="Briques et truelle.">
+            </div>
+            <div class="text-photos">
+              <h3>Design and build</h3>
+              <p class="text-service">jhbdhvzavedaz dazd azedayudbahudbak dahdbahdbaudbavda duadauhgd ad a</p>
+            </div>
           </div>
-          <div class="text-photos">
-            <h3>Design and build</h3>
-            <p class="text-service">jhbdhvzavedaz dazd azedayudbahudbak dahdbahdbaudbavda duadauhgd ad a</p>
+          <div class="photo">
+            <div class="photo-img">
+              <img src="img/photo3.jpg" alt="Maçon en train de mettre du ciment.">
+            </div>
+            <div class="text-photos">
+              <h3>Tiling and painting</h3>
+              <p class="text-service">gnjengejingerg genergengneg egnene ngjegeion jg j gegnegj eetrerte</p>
+            </div>
           </div>
-        </div>
-        <div class="photo">
-          <div class="photo-img">
-            <img src="img/photo3.jpg" alt="Maçon en train de mettre du ciment.">
+          <a class="white" href="http://google.com">
+            <div class="service-button">
+            <p class="text-button">View all service</p>
           </div>
-          <div class="text-photos">
-            <h3>Tiling and painting</h3>
-            <p class="text-service">gnjengejingerg genergengneg egnene ngjegeion jg j gegnegj eetrerte</p>
-          </div>
-        </div>
-        <div class="service-button">
-          <p class="text-button">View all service</p>
+        </a>
         </div>
       </div>
-    </div>
 
-    <div class="recent-projects">
-      <h2>Recent projects</h2>
-      <p class="text-projects">engekongkejngjkngejkng ejgnjekgejkngjkeng ezggzgzgvdcdeef erfefefef
-        zfeifejziriejriejrije"jrjefebrfbehbfehfebfefhebfhje fjehbfhjebfhebr
-        jgbrgruibghrug gebghergherbghberhgb gehgbhejrbgehjbgeh zjfbejhzbghjezbfb he fhebfj efje  f er fe f e </p>
-        <div class="img-slide">
-          <img src="img/photo4.jpg" alt="images">
-        </div class="about-us">
-        <h2>About us</h2>
+      <div class="recent-projects">
+        <h2>Recent projects</h2>
         <p class="text-projects">engekongkejngjkngejkng ejgnjekgejkngjkeng ezggzgzgvdcdeef erfefefef
           zfeifejziriejriejrije"jrjefebrfbehbfehfebfefhebfhje fjehbfhjebfhebr
           jgbrgruibghrug gebghergherbghberhgb gehgbhejrbgehjbgeh zjfbejhzbghjezbfb he fhebfj efje  f er fe f e </p>
-          <div class="photo-about">
-            <img src="img/photo5.jpg" alt="image ronde de l'acceuil">
+          <div class="img-slide">
+            <img src="img/photo4.jpg" alt="images">
           </div>
-          <div class="text-about">
+          <h2>About us</h2>
+          <p class="text-projects">engekongkejngjkngejkng ejgnjekgejkngjkeng ezggzgzgvdcdeef erfefefef
+            zfeifejziriejriejrije"jrjefebrfbehbfehfebfefhebfhje fjehbfhjebfhebr
+            jgbrgruibghrug gebghergherbghberhgb gehgbhejrbgehjbgeh zjfbejhzbghjezbfb he fhebfj efje  f er fe f e </p>
+            <div>
+              <div class="photo-about">
+                <img src="img/photo5.jpg" alt="image ronde de l'acceuil">
+              </div>
+              <div class="text-about">
+                <div class="casque">
+                  <div class="img-about">
+                    <img src="img/casque.jpg" alt="casque">
+                  </div>
+                  <div class="text-img">
+                    <h4>hghkzjreazrjhazrhj</h4>
+                    <p>fhhfhuebbehrbier fjksbfsb fjks  <br>
+                    kgjdkijthrjhsebrh zjhbrhjzebrhzbr rzahb</p>
+                  </div>
+                </div>
+                <div class="rouleau">
+                  <div class="img-about">
+                    <img src="img/rouleau.jpg" alt="rouleau">
+                  </div>
+                  <div class="text-img">
+                    <h4>hghkzjreazrjhazrhj</h4>
+                    <p>fhhfhuebbehrbier fjksbfsb fjks  <br>
+                    kgjdkijthrjhsebrh zjhbrhjzebrhzbr rzahb</p>
+                  </div>
+                </div>
+                <div class="perceuse">
+                  <div class="img-about">
+                    <img src="img/perceuse.jpg" alt="perceuse">
+                  </div>
+                  <div class="text-img">
+                    <h4>hghkzjreazrjhazrhj</h4>
+                    <p>fhhfhuebbehrbier fjksbfsb fjks  <br>
+                    kgjdkijthrjhsebrh zjhbrhjzebrhzbr rzahb</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-      </div>
-    </body>
-    </html>
+        </body>
+        </html>
